--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,7 +47,7 @@ const textCase = "uppercase";
 		<Header />
 
 		<h1>{pageTitle}</h1>
-		<h2>... and my new Astro site!</h2>
+		<h2>... and my new Astro dfgdfgfdgdfgdfsite!</h2>
 
 		<p>
 			I am working through Astro's introductory tutorial. This is the
